[tool.poetry]
name = "saxproject"
version = "0.1.0"
description = ""
authors = ["Massimiliano Bertinetti <max-b@murena.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
jinja2 = "^3.1.2"
parse = "^1.19.0"
requests = "^2.28.1"
requests-wsgi-adapter = "^0.4.1"
webob = "^1.8.7"
whitenoise = "^6.3.0"
pytest-cov = "^4.0.0"
pytest-md = "^0.2.0"
pytest-emoji = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
