[tool.poetry]
name = "saxproject"
version = "0.1.1"
description = ""
authors = ["Massimiliano Bertinetti <max-b@murena.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
parse = "^1.19.0"
requests = "^2.28.1"
requests-wsgi-adapter = "^0.4.1"
webob = "^1.8.7"
whitenoise = "^6.3.0"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.32.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "saxproject/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
major_on_zero = false
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "poetry build"